--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -10,6 +10,6 @@
 
 .settingsBtn {
     -fx-font-size: 12;
-    -fx-background-color: white;
+    -fx-background-color: #D9D9D9;
     -fx-background-radius: 31px;
 }
