--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -126,7 +126,7 @@
                         </Pane>
                      </children>
                   </Pane>
-                  <Pane fx:id="productsPane" prefHeight="871.0" prefWidth="814.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="productsPane" prefHeight="990.0" prefWidth="868.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <GridPane prefHeight="62.0" prefWidth="814.0">
                           <columnConstraints>
@@ -158,8 +158,44 @@
                               </Label>
                            </children>
                         </GridPane>
-                        <Label fx:id="searchResult" alignment="CENTER" contentDisplay="CENTER" prefHeight="804.0" prefWidth="814.0" text="Keine Produkte wurden gefunden" />
-                        <ListView fx:id="productsListView" fixedCellSize="40.0" prefHeight="804.0" prefWidth="814.0" style="-fx-background-color: transparent; -fx-font-size: 15px;" styleClass="l" />
+                        <Label fx:id="searchResult" alignment="CENTER" contentDisplay="CENTER" layoutY="60.0" prefHeight="930.0" prefWidth="868.0" text="Keine Produkte wurden gefunden" />
+                        <ScrollPane fx:id="ScrollPaneProducts" layoutY="59.0" prefHeight="930.0" prefWidth="868.0">
+                           <content>
+                              <GridPane fx:id="GridPaneProducts" onMouseClicked="#assignProductToGrid" prefHeight="922.0" prefWidth="866.0">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <Label fx:id="productTitleInGrid" alignment="CENTER" prefHeight="27.0" prefWidth="203.0" text="ProductTitle" wrapText="true">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                       <GridPane.margin>
+                                          <Insets top="135.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <ImageView fx:id="imageForProduct" fitHeight="132.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../../../../../../../Desktop/BilderFürProducts/depositphotos_72191677-stock-photo-pizza-margherita.jpg" />
+                                       </image>
+                                       <GridPane.margin>
+                                          <Insets bottom="27.0" />
+                                       </GridPane.margin>
+                                    </ImageView>
+                                 </children>
+                              </GridPane>
+                           </content>
+                        </ScrollPane>
                      </children>
                   </Pane>
                     </children>
