--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -13,3 +13,9 @@
     -fx-background-color: #D9D9D9;
     -fx-background-radius: 31px;
 }
+
+.loginBG{
+    -fx-background-image: url("https://i.imgur.com/HbMZomN.png");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: 20 20;
+}
