--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -193,19 +193,21 @@
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
-                                    <Pane fx:id="imageForProduct" prefHeight="156.0" prefWidth="217.0" GridPane.valignment="TOP">
+                                    <Pane fx:id="imageForProduct" prefHeight="138.0" prefWidth="217.0" GridPane.valignment="CENTER">
                                        <opaqueInsets>
                                           <Insets />
                                        </opaqueInsets>
                                     </Pane>
-                                    <Label fx:id="productTitleInGrid" alignment="CENTER" prefHeight="27.0" prefWidth="218.0" text="ProductTitle" wrapText="true" GridPane.valignment="BOTTOM">
+                                    <Label fx:id="productTitleInGrid" alignment="CENTER" prefHeight="32.0" prefWidth="217.0" text="ProductTitle" wrapText="true" GridPane.valignment="TOP">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                        <GridPane.margin>
-                                          <Insets top="135.0" />
+                                          <Insets />
                                        </GridPane.margin>
                                     </Label>
+                                    <Button fx:id="remove" mnemonicParsing="false" onAction="#removeFromBillButton" prefHeight="25.0" prefWidth="109.0" text="Button" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM" />
+                                    <Button fx:id="add" mnemonicParsing="false" onAction="#addToBillButton" prefHeight="25.0" prefWidth="109.0" text="Button" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
                                  </children>
                               </GridPane>
                            </content>
