--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -100,7 +100,6 @@
                         </VBox>
                         <FlowPane columnHalignment="CENTER" hgap="10.0" layoutX="3.0" layoutY="63.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="27.0" prefWidth="609.0" vgap="20.0">
                            <children>
-                              <Button fx:id="billSettings" mnemonicParsing="false" onAction="#setupBill" styleClass="settingsBtn" stylesheets="@styles.css" text="Rechnung bearbeiten" />
                               <Button fx:id="userSettings" mnemonicParsing="false" onAction="#setupUsers" styleClass="settingsBtn" stylesheets="@styles.css" text="Nutzer bearbeiten" />
                               <Button fx:id="productsSettings" mnemonicParsing="false" onAction="#setupProducts" styleClass="settingsBtn" stylesheets="@styles.css" text="Prdoukte bearbeiten" />
                               <Button fx:id="tablesSettings" mnemonicParsing="false" onAction="#setupTables" styleClass="settingsBtn" stylesheets="@styles.css" text="Tische bearbeiten" />
@@ -124,21 +123,24 @@
                               <TextField fx:id="newPasswordField" layoutX="160.0" layoutY="517.0" prefHeight="25.0" prefWidth="164.0" promptText="New Password" />
                            </children>
                         </Pane>
-                        <Pane fx:id="productsSettingsPane" layoutY="115.0" prefHeight="638.0" prefWidth="828.0" visible="false">
+                        <Pane fx:id="productsSettingsPane" layoutY="115.0" prefHeight="663.0" prefWidth="828.0" visible="false">
                            <children>
                               <ListView fx:id="productsListViewSettings" layoutY="-10.0" prefHeight="311.0" prefWidth="828.0" />
                               <Label layoutY="324.0" prefHeight="27.0" prefWidth="281.0" style="-fx-font-size: 18;" text="Information about Product:" />
                               <Label fx:id="productsSettingsName" layoutY="361.0" prefHeight="27.0" prefWidth="828.0" text="Product Name: None" />
                               <Label fx:id="productsSettingsDescription" layoutY="388.0" prefHeight="27.0" prefWidth="828.0" text="Description: None" />
                               <Label fx:id="productsSettingsURL" layoutY="415.0" prefHeight="27.0" prefWidth="828.0" text="Image URL: None" />
-                              <Button layoutY="445.0" mnemonicParsing="false" onAction="#productsSettingsChangeName" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Product Name" />
-                              <Button layoutY="476.0" mnemonicParsing="false" onAction="#productsSettingsChangeDescription" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Description" />
-                              <Button layoutY="507.0" mnemonicParsing="false" onAction="#productsSettingsChangeURL" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Image URL" />
-                              <Button layoutX="-1.0" layoutY="558.0" mnemonicParsing="false" onMouseReleased="#productsSettingsDelete" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Delete Product" />
-                              <Button layoutX="144.0" layoutY="558.0" mnemonicParsing="false" onMouseReleased="#productsSettingsCreateNew" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Create New Product" />
-                              <TextField fx:id="newProductName" layoutX="160.0" layoutY="445.0" prefHeight="25.0" prefWidth="669.0" promptText="New Product Name" />
-                              <TextField fx:id="newProductDescription" layoutX="160.0" layoutY="476.0" prefHeight="25.0" prefWidth="669.0" promptText="New Description" />
-                              <TextField fx:id="newURL" layoutX="160.0" layoutY="507.0" prefHeight="25.0" prefWidth="669.0" promptText="New Image URL" />
+                              <Button layoutY="476.0" mnemonicParsing="false" onAction="#productsSettingsChangeName" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Product Name" />
+                              <Button layoutY="507.0" mnemonicParsing="false" onAction="#productsSettingsChangeDescription" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Description" />
+                              <Button layoutY="538.0" mnemonicParsing="false" onAction="#productsSettingsChangeURL" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Image URL" />
+                              <Button layoutX="-1.0" layoutY="626.0" mnemonicParsing="false" onMouseReleased="#productsSettingsDelete" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Delete Product" />
+                              <Button layoutX="144.0" layoutY="626.0" mnemonicParsing="false" onMouseReleased="#productsSettingsCreateNew" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Create New Product" />
+                              <TextField fx:id="newProductName" layoutX="160.0" layoutY="476.0" prefHeight="25.0" prefWidth="669.0" promptText="New Product Name" />
+                              <TextField fx:id="newProductDescription" layoutX="160.0" layoutY="507.0" prefHeight="25.0" prefWidth="669.0" promptText="New Description" />
+                              <TextField fx:id="newURL" layoutX="160.0" layoutY="538.0" prefHeight="25.0" prefWidth="669.0" promptText="New Image URL" />
+                              <Button layoutY="569.0" mnemonicParsing="false" onAction="#productsSettingsChangePrice" prefHeight="25.0" prefWidth="142.0" styleClass="settingsBtn" text="Change Price" />
+                              <TextField fx:id="newProductPrice" layoutX="160.0" layoutY="569.0" prefHeight="25.0" prefWidth="669.0" promptText="New Price" />
+                              <Label fx:id="productsSettingsPrice" layoutY="442.0" prefHeight="27.0" prefWidth="828.0" text="Price: None" />
                            </children>
                         </Pane>
                      </children>
@@ -176,9 +178,9 @@
                            </children>
                         </GridPane>
                         <Label fx:id="searchResult" alignment="CENTER" contentDisplay="CENTER" layoutY="60.0" prefHeight="930.0" prefWidth="868.0" text="Keine Produkte wurden gefunden" />
-                        <ScrollPane fx:id="ScrollPaneProducts" layoutY="59.0" prefHeight="930.0" prefWidth="868.0">
+                        <ScrollPane fx:id="ScrollPaneProducts" layoutY="59.0" prefHeight="930.0" prefWidth="868.0" style="-fx-vbar-unit-increment: 100;">
                            <content>
-                              <GridPane fx:id="GridPaneProducts" hgap="20.0" onMouseClicked="#assignProductToGrid" prefHeight="915.0" prefWidth="865.0" vgap="20.0">
+                              <GridPane fx:id="GridPaneProducts" hgap="20.0" prefHeight="915.0" prefWidth="865.0" vgap="20.0">
                                  <columnConstraints>
                                     <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -186,14 +188,10 @@
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                  </columnConstraints>
                                  <rowConstraints>
-                                    <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="220.0" minHeight="220.0" prefHeight="220.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                    <Insets bottom="20.0" left="3.0" right="50.0" top="20.0" />
                                  </padding>
                               </GridPane>
                            </content>
@@ -216,7 +214,7 @@
                         </Label>
                         <ScrollPane fx:id="bill" layoutY="58.0" prefHeight="494.0" prefWidth="254.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="110.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
                      <content>
-                        <Label fx:id="billText" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="872.0" prefWidth="463.0" text="Add Products" textAlignment="CENTER" wrapText="true">
+                        <Label fx:id="billText" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="872.0" prefWidth="463.0" style="-fx-font-size: 14;" text="Rechnug leer" wrapText="true">
                            <font>
                               <Font name="Arial Bold" size="25.0" />
                            </font>
@@ -288,7 +286,7 @@
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin></Label>
-            <ImageView fitHeight="56.0" fitWidth="198.0" onMouseClicked="#openSettings" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="adminButton" fitHeight="56.0" fitWidth="198.0" onMouseClicked="#openSettings" pickOnBounds="true" preserveRatio="true">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
