--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/login.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/login.fxml
@@ -46,7 +46,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="954.0" prefWidth="1647.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.LoginController">
+<VBox prefHeight="954.0" prefWidth="1647.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="at.ac.fhcampuswien.xsolutions.LoginController">
    <children>
       <VBox fx:id="bg" alignment="CENTER" onMouseClicked="#unfocusFields" prefHeight="200.0" prefWidth="100.0" styleClass="loginBG" stylesheets="@styles.css" VBox.vgrow="ALWAYS">
          <children>
