--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -318,7 +318,7 @@
             </VBox>
          </children>
       </Pane>
-      <Pane fx:id="paymentMethodsPane" prefHeight="1080.0" prefWidth="1920.0" visible="false">
+      <Pane fx:id="paymentMethodsPane" prefHeight="1080.0" prefWidth="1920.0">
          <children>
             <Pane opacity="0.62" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" />
             <Pane layoutX="626.0" layoutY="321.0" prefHeight="438.0" prefWidth="669.0" styleClass="paymentPane" stylesheets="@styles.css">
@@ -341,16 +341,39 @@
                         <String fx:value="paymentMethodButton" />
                      </styleClass>
                   </Button>
+                  <TextField fx:id="tipField" layoutX="260.0" layoutY="357.0" promptText="Trinkgeld" />
+                  <Button layoutX="297.0" layoutY="389.0" mnemonicParsing="false" onAction="#setTipButton" styleClass="settingsBtn" text="Annehmen" />
                </children>
             </Pane>
             <Pane fx:id="paymentSuccessfulPane" layoutX="626.0" layoutY="321.0" prefHeight="438.0" prefWidth="669.0" styleClass="paymentPane" stylesheets="@styles.css" visible="false">
                <children>
                   <Button layoutX="622.0" layoutY="16.0" mnemonicParsing="false" onAction="#closePaymentPane" prefHeight="26.0" prefWidth="26.0" styleClass="closeBtn" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="241.0" layoutY="203.0" prefHeight="32.0" prefWidth="188.0" style="-fx-font-size: 18;" text="Zahlung erfolgreich!" textAlignment="CENTER">
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="240.0" layoutY="172.0" prefHeight="32.0" prefWidth="188.0" style="-fx-font-size: 18;" text="Zahlung erfolgreich!" textAlignment="CENTER">
                      <padding>
                         <Insets left="10.0" top="5.0" />
                      </padding>
                   </Label>
+                  <Label fx:id="restMoneyLabelSuccess" alignment="CENTER" contentDisplay="CENTER" layoutX="55.0" layoutY="234.0" prefHeight="32.0" prefWidth="559.0" style="-fx-font-size: 18;" textAlignment="CENTER">
+                     <padding>
+                        <Insets left="10.0" top="5.0" />
+                     </padding>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="payCashPane" layoutX="626.0" layoutY="321.0" prefHeight="438.0" prefWidth="669.0" styleClass="paymentPane" stylesheets="@styles.css" visible="false">
+               <children>
+                  <Button layoutX="622.0" layoutY="16.0" mnemonicParsing="false" onAction="#closePaymentPane" prefHeight="26.0" prefWidth="26.0" styleClass="closeBtn" />
+                  <Label layoutX="14.0" layoutY="14.0" style="-fx-font-size: 18;" text="Bargeld Zahlung">
+                     <padding>
+                        <Insets left="10.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="paymentAmountPayedField" layoutX="22.0" layoutY="143.0" prefHeight="25.0" prefWidth="156.0" promptText="Bezahlt" />
+                  <Label fx:id="paymentTotalBeforeAllLabel" layoutX="22.0" layoutY="66.0" prefHeight="17.0" prefWidth="356.0" text="Gesammtsumme inkl MWSt:" />
+                  <Label fx:id="paymentTotalLabel" layoutX="22.0" layoutY="118.0" prefHeight="17.0" prefWidth="523.0" text="Gesammtsumme inkl. Trinkgeld u. MWSt: " />
+                  <Label fx:id="paymentTipLabel" layoutX="22.0" layoutY="92.0" prefHeight="17.0" prefWidth="237.0" text="Trinkgeld:" />
+                  <Button layoutX="191.0" layoutY="143.0" mnemonicParsing="false" onAction="#confirmPaymentCash" styleClass="settingsBtn" text="Bezahlen" />
+                  <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="56.0" layoutY="177.0" text="Summe zu klein!" textFill="#a82b2b" visible="false" />
                </children>
             </Pane>
          </children>
